get eventsのエンドポイント作成2
