# docs/openapi.yml
@@ -170,17 +170,7 @@ components:
         isConfirmed:
           type: boolean
         date:
-          type: object
-          properties:
-            start:
-              type: string
-              format: date-time
-            end:
-              type: string
-              format: date-time
-          required:
-            - start
-            - end
+          $ref: "#/components/schemas/DateTimeResponse"
         dateOptions:
           type: array
           items:
@@ -190,6 +180,18 @@ components:
         - title
         - description
         - status
+    DateTimeResponse:
+      type: object
+      properties:
+        start:
+          type: string
+          format: date-time
+        end:
+          type: string
+          format: date-time
+      required:
+        - start
+        - end
     PostEventApplicantsRequest:
       type: object
       properties:
